...
        Scaffold(snackbarHost = { SnackbarHost(snackbarHostState) }) { padding ->
            logger.debug { "Mostrando SignUpScreen" }
            Column(
                Modifier
                    .padding(padding)
                    .fillMaxWidth()
                    .testTag("signup_screen")
                    .verticalScroll(rememberScrollState())
                    .padding(
                        horizontal = MaterialTheme.spacing.x3,
                        vertical = MaterialTheme.spacing.x2
                    ),
                horizontalAlignment = Alignment.CenterHorizontally
...
